@@ -1,0 +1,36 @@
+########### GENERAL SECTION ################################
+BATCH_NAME= ftp  
+CLIENTS_NUM=1
+INTERFACE   = eth0    
+NETMASK=20  
+IP_ADDR_MIN= 192.168.1.1
+IP_ADDR_MAX= 192.168.5.255  #Actually - this is for self-control
+CYCLES_NUM= 1
+
+########### LOGIN SECTION ##################################
+LOGIN=n
+#LOGIN_USERNAME=
+#LOGIN_PASSWORD=
+#LOGIN_REQ_TYPE=
+#LOGIN_POST_STR=
+#LOGIN_URL=
+#LOGIN_URL_MAX_TIME=
+#LOGIN_URL_INTERLEAVE_TIME=
+#LOGIN_CYCLING=
+
+########### UAS SECTION ####################################
+UAS=y
+UAS_URLS_NUM = 1
+
+UAS_URL=ftp://anonymous:stam@127.0.0.1/curl-7.16.0.tar.gz
+UAS_URL_MAX_TIME = 60
+UAS_URL_INTERLEAVE_TIME = 0
+
+########### LOGOFF SECTION #################################
+LOGOFF=n
+#LOGOFF_REQ_TYPE=
+#LOGOFF_POST_STR=
+#LOGOFF_URL=
+#LOGOFF_URL_MAX_TIME=
+#LOGOFF_URL_INTERLEAVE_TIME=
+#LOGOFF_CYCLING=
